--- a/CuidooApp/Mom/Scenes/Request/BabySitterView/BabySitterInfosView.xib
+++ b/CuidooApp/Mom/Scenes/Request/BabySitterView/BabySitterInfosView.xib
@@ -64,7 +64,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="139" height="78"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="uY5-fX-ix5">
-                                                    <rect key="frame" x="48.5" y="16" width="42" height="20.5"/>
+                                                    <rect key="frame" x="48.5" y="19" width="42" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zKo-AH-RwW">
                                                             <rect key="frame" x="0.0" y="0.0" width="22" height="20.5"/>
@@ -78,7 +78,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CUIDADOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Meu-oQ-bpz">
-                                                    <rect key="frame" x="34" y="38.5" width="71" height="17"/>
+                                                    <rect key="frame" x="34" y="42.5" width="71" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -86,23 +86,23 @@
                                             </subviews>
                                             <color key="backgroundColor" red="0.92923806978361256" green="0.92923806978361256" blue="0.92923806978361256" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstItem="uY5-fX-ix5" firstAttribute="top" secondItem="EbB-M8-oL4" secondAttribute="top" constant="16" id="5Tl-SL-8qQ"/>
+                                                <constraint firstItem="uY5-fX-ix5" firstAttribute="top" secondItem="EbB-M8-oL4" secondAttribute="top" constant="19" id="5Tl-SL-8qQ"/>
                                                 <constraint firstItem="uY5-fX-ix5" firstAttribute="centerX" secondItem="EbB-M8-oL4" secondAttribute="centerX" id="VjK-PJ-3c5"/>
                                                 <constraint firstItem="Meu-oQ-bpz" firstAttribute="centerX" secondItem="EbB-M8-oL4" secondAttribute="centerX" id="e1k-62-NvC"/>
-                                                <constraint firstItem="Meu-oQ-bpz" firstAttribute="top" secondItem="uY5-fX-ix5" secondAttribute="bottom" constant="2" id="jXT-xC-1q0"/>
+                                                <constraint firstItem="Meu-oQ-bpz" firstAttribute="top" secondItem="uY5-fX-ix5" secondAttribute="bottom" constant="3" id="jXT-xC-1q0"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Frv-Fp-fpk">
                                             <rect key="frame" x="139" y="0.0" width="136" height="78"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVALIAÇÃO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nHM-9q-dL3">
-                                                    <rect key="frame" x="31" y="37" width="74.5" height="17"/>
+                                                    <rect key="frame" x="31" y="39" width="74.5" height="19"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIe-gO-SMy">
-                                                    <rect key="frame" x="38" y="16" width="60" height="17"/>
+                                                    <rect key="frame" x="38" y="19" width="60" height="17"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5WW-LX-Pns">
                                                             <rect key="frame" x="0.0" y="0.0" width="38" height="17"/>
@@ -124,21 +124,22 @@
                                             <constraints>
                                                 <constraint firstItem="nHM-9q-dL3" firstAttribute="centerX" secondItem="Frv-Fp-fpk" secondAttribute="centerX" id="2gA-Wj-FfJ"/>
                                                 <constraint firstItem="VIe-gO-SMy" firstAttribute="centerX" secondItem="Frv-Fp-fpk" secondAttribute="centerX" id="5pe-g9-aAX"/>
-                                                <constraint firstItem="nHM-9q-dL3" firstAttribute="top" secondItem="VIe-gO-SMy" secondAttribute="bottom" constant="4" id="7v7-TJ-hDT"/>
-                                                <constraint firstItem="VIe-gO-SMy" firstAttribute="top" secondItem="Frv-Fp-fpk" secondAttribute="top" constant="16" id="LRR-di-GoT"/>
+                                                <constraint firstItem="nHM-9q-dL3" firstAttribute="top" secondItem="VIe-gO-SMy" secondAttribute="bottom" constant="3" id="7v7-TJ-hDT"/>
+                                                <constraint firstItem="VIe-gO-SMy" firstAttribute="top" secondItem="Frv-Fp-fpk" secondAttribute="top" constant="19" id="LRR-di-GoT"/>
+                                                <constraint firstAttribute="bottom" secondItem="nHM-9q-dL3" secondAttribute="bottom" constant="20" id="lx8-EA-x8Y"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Owe-Xm-zOn">
                                             <rect key="frame" x="275" y="0.0" width="139" height="78"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 anos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1G-2N-UzE">
-                                                    <rect key="frame" x="42.5" y="16" width="54" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="2 anos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1G-2N-UzE">
+                                                    <rect key="frame" x="42.5" y="19" width="54" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" red="0.38823807240000002" green="0.38823020460000002" blue="0.388235569" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPERIÊNCIA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sou-eu-XHI">
-                                                    <rect key="frame" x="26.5" y="40.5" width="86.5" height="17"/>
+                                                    <rect key="frame" x="26.5" y="42.5" width="86.5" height="15.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -146,10 +147,11 @@
                                             </subviews>
                                             <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstItem="Sou-eu-XHI" firstAttribute="top" secondItem="Q1G-2N-UzE" secondAttribute="bottom" constant="4" id="3BH-Zj-e9z"/>
-                                                <constraint firstItem="Q1G-2N-UzE" firstAttribute="top" secondItem="Owe-Xm-zOn" secondAttribute="top" constant="16" id="G84-nP-Y2m"/>
+                                                <constraint firstItem="Sou-eu-XHI" firstAttribute="top" secondItem="Q1G-2N-UzE" secondAttribute="bottom" constant="3" id="3BH-Zj-e9z"/>
+                                                <constraint firstItem="Q1G-2N-UzE" firstAttribute="top" secondItem="Owe-Xm-zOn" secondAttribute="top" constant="19" id="G84-nP-Y2m"/>
                                                 <constraint firstItem="Sou-eu-XHI" firstAttribute="centerX" secondItem="Owe-Xm-zOn" secondAttribute="centerX" id="T2N-33-Ywm"/>
                                                 <constraint firstItem="Q1G-2N-UzE" firstAttribute="centerX" secondItem="Owe-Xm-zOn" secondAttribute="centerX" id="VxA-P8-Pbo"/>
+                                                <constraint firstAttribute="bottom" secondItem="Sou-eu-XHI" secondAttribute="bottom" constant="20" id="fKY-Xi-qc3"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -159,7 +161,7 @@
                                     </constraints>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" red="0.92941802740097046" green="0.92940050363540649" blue="0.9294123649597168" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
                                 <constraint firstItem="Shi-rF-PmI" firstAttribute="top" secondItem="MRG-lh-5MV" secondAttribute="bottom" id="6pX-5D-Ws9"/>
                                 <constraint firstItem="Shi-rF-PmI" firstAttribute="leading" secondItem="YiA-M4-x6T" secondAttribute="leading" id="Idr-pg-fyN"/>
@@ -177,7 +179,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.92030853426395942" green="0.92030853426395942" blue="0.92030853426395942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.92157477139999999" green="0.92155748609999999" blue="0.92156922819999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstItem="Zyl-kD-jb5" firstAttribute="top" secondItem="K9s-G6-rhj" secondAttribute="bottom" constant="16" id="Mse-Lc-GoY"/>
                         <constraint firstAttribute="trailing" secondItem="YiA-M4-x6T" secondAttribute="trailing" id="Q5h-HA-dD7"/>
@@ -223,6 +225,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
+            <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="pEo-Kw-0Yb" firstAttribute="top" secondItem="yR4-yf-zmB" secondAttribute="bottom" constant="16" id="2hi-IH-OIg"/>
                 <constraint firstItem="pEo-Kw-0Yb" firstAttribute="top" secondItem="afx-pw-pOY" secondAttribute="bottom" id="2tf-u1-w94"/>
