--- a/CuidooApp/Mom/Storyboards/Profile.storyboard
+++ b/CuidooApp/Mom/Storyboards/Profile.storyboard
@@ -247,6 +247,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="nameLabel" destination="ACm-t6-ugi" id="NsY-hK-wAJ"/>
+                        <outlet property="navegationItem" destination="zE3-kW-Iwl" id="i8e-M6-zB1"/>
                         <outlet property="profilePicMomImageView" destination="gia-7B-cbH" id="0zA-JR-bjN"/>
                     </connections>
                 </tableViewController>
