Versão do Test Flight

--- a/CuidooApp/Mom/Storyboards/Chat.storyboard
+++ b/CuidooApp/Mom/Storyboards/Chat.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8ow-wZ-GUX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,6 +68,7 @@
                     <connections>
                         <outlet property="babySitterChatImageView" destination="IFv-bo-40D" id="gHu-lf-gyS"/>
                         <outlet property="headView" destination="VwK-JX-1Gg" id="Pdl-i0-ycO"/>
+                        <outlet property="nameLabel" destination="QoQ-UQ-t73" id="bAj-tM-Zcg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qir-ZD-Yac" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
